grammar.js
    source_file: $ => seq(
      repeat($.import_statement),
      $.agent_definition
    ),

    // Comments
    identifier: $ => /[A-Z][A-Za-z0-9\-_]*(\s[A-Z][A-Za-z0-9\-_]*)*/, 
    attribute_key: $ => /[a-z][a-zA-Z0-9_]*/,
    string: $ => /"(\\.|[^"\\])*"/,
    number: $ => /[0-9]+(\.[0-9]+)?([eE][-+]?[0-9]+)?/,
    atom: $ => /:([_a-zA-Z][\w_]*|"[^"\\]*")/,
    embedded_code: $ => choice(
      $.single_line_embedded_code,
      $.multi_line_embedded_code
    ),

    single_line_embedded_code: $ => /\$((js|ts)?>)\s*[^\r\n]*/,
    
    multi_line_embedded_code: $ => seq(
      /\$((js|ts)?)>>>/,
      $._indent,
      repeat(/.*/),
      $._dedent
    ),

    // Multi-line strings
    type_tag: $ => seq(
      '<',
      /[a-zA-Z]+/,
      choice(
        $.string,
        $.number,
        $.boolean_literal,
        $.null_literal,
        $.atom,
        $.identifier,
        $.iso_duration
      ),
      optional(seq('|', /[^>]+/)),
      '>'
    ),

    // Core value types
    simple_value: $ => choice(
      $.string,
      $.number,
      $.boolean_literal,
      $.null_literal,
      $.atom,
      $.type_tag
    ),

    enhanced_simple_value: $ => choice(
      $.simple_value,
      $.multi_line_string
    ),

    embedded_value: $ => prec(1, choice(
      $.embedded_code,
      $.simple_value
    )),

    typed_value: $ => prec(2, choice(
      $.type_tag,
      $.enhanced_simple_value
    )),

    // Parameters and properties
    parameter: $ => seq(
      $.attribute_key,
      ':',
      $.simple_value
    ),

    inline_parameter_list: $ => prec.left(seq(
      $.parameter,
      repeat(seq(',', $.parameter))
    )),

    // Collections
    import_statement: $ => seq(
      'import',
      $.import_path,
      optional(seq('as', $.identifier))
    ),

    import_path: $ => seq(
      $.identifier,
      repeat(seq('/', $.identifier))
    ),

    // Agent definition (per specification: agent IDENTIFIER + indented block)
    agent_definition: $ => seq(
      'agent',
      $.identifier,
      $._indent,
      seq('displayName', ':', $.string),
      optional(seq('brandName', ':', $.string)),
      optional($.config_section),
      optional($.defaults_section),
      repeat1($.flow_section),
      $.messages_section,
      $._dedent
    ),

    // Defaults section
    defaults_section: $ => seq(
      'agentDefaults',
      'Defaults',
      $._indent,
      repeat($.default_property),
      $._dedent
    ),

    default_property: $ => choice(
      seq('fallbackMessage', ':', $.enhanced_simple_value),
      seq('messageTrafficType', ':', $.atom),
      seq('ttl', ':', $.string),
      seq('postbackData', ':', $.embedded_code),
      seq('expressions', ':', $._indent, seq('language', ':', $.atom), $._dedent)
    ),

    // Config section
    flow_section: $ => seq(
      'flow',
      $.identifier,
      $._indent,
      repeat($.flow_rule),
      $._dedent
    ),

    flow_rule: $ => seq(
      $.flow_operand_or_expression,
      repeat1(seq('->', $.flow_operand_or_expression)),
      optional($.with_clause),
      repeat($.when_clause)
    ),

    flow_operand: $ => choice(
      $.atom,
      $.identifier,
      $.string
    ),

    flow_operand_or_expression: $ => choice(
      $.flow_operand,
      $.flow_action_text,
      $.embedded_code,
      seq('start', $.identifier)
    ),

    messages_section: $ => seq(
      'messages',
      'Messages',
      $._indent,
      repeat1(choice($.agent_message, $.message_shortcut)),
      $._dedent
    ),

    // Agent messages
    agent_message: $ => seq(
      'agentMessage',
      optional($.identifier),
      $._indent,
      optional(seq('messageTrafficType', ':', $.atom)),
      optional(choice(
        seq('expireTime', ':', $.string),
        seq('ttl', ':', $.string)
      )),
      $.content_message,
      $._dedent
    ),

    content_message: $ => seq(
      'contentMessage',
      $._indent,
      choice(
        seq('text', ':', choice($.enhanced_simple_value, $.embedded_value)),
        seq('fileName', ':', $.string),
        seq('uploadedRbmFile', $.uploaded_rbm_file),
        seq('richCard', $.rich_card),
        seq('contentInfo', $.content_info)
      ),
      repeat($.suggestion),
      $._dedent
    ),

    suggestion: $ => seq(
      'suggestion',
      $._indent,
      choice(
        seq('reply', $.suggested_reply),
        seq('action', $.suggested_action)
      ),
      $._dedent
    ),

    suggested_reply: $ => $.inline_parameter_list,

    suggested_action: $ => seq(
      optional($.inline_parameter_list),
      $._indent,
      choice(
        $.dial_action,
        $.view_location_action,
        $.create_calendar_event_action,
        $.open_url_action,
        $.share_location_action,
        $.compose_action
      ),
      $._dedent
    ),

    dial_action: $ => seq(
      'dialAction',
      $._indent,
      seq('phoneNumber', ':', $.typed_value),
      $._dedent
    ),

    open_url_action: $ => seq(
      'openUrlAction',
      $._indent,
      seq('url', ':', $.typed_value),
      $._dedent
    ),

    message_shortcut: $ => seq(
      optional(choice('transactional', 'promotional')),
      $.text_shortcut
      // TODO: Add file_shortcut, rich_card_shortcut and carousel_shortcut after resolving conflicts
    ),

    text_shortcut: $ => seq(
      'text',
      $.identifier,  // Message ID comes first
      choice($.enhanced_simple_value, $.embedded_value),  // Then text parameter
      optional(seq(
        $._indent,
        repeat($.suggestion_shortcut),
        $._dedent
      ))
    ),

    // TODO: Fix file_shortcut conflicts
    // file_shortcut: $ => seq(
    //   choice(
    //     seq('rbmFile', $.string, optional($.string)),
    //     seq('file', $.typed_value, optional($.typed_value), prec(-1, optional($.atom)))
    //   ),
    //   optional(seq(
    //     $._indent,
    //     repeat($.suggestion_shortcut),
    //     $._dedent
    //   ))
    // ),

    // TODO: Fix conflicts in rich_card_shortcut and carousel_shortcut
    // rich_card_shortcut: $ => seq(
    //   'richCard',
    //   $.enhanced_simple_value,
    //   prec(-1, repeat(choice($.atom, $.typed_value))),
    //   optional(seq(
    //     $._indent,
    //     optional(seq('description', ':', $.enhanced_simple_value)),
    //     repeat($.suggestion_shortcut),
    //     $._dedent
    //   ))
    // ),

    // carousel_shortcut: $ => seq(
    //   'carousel',
    //   optional($.atom),
    //   $._indent,
    //   repeat1($.rich_card_shortcut),
    //   $._dedent
    // ),

    // Suggestion shortcuts
    suggestion_shortcut: $ => choice(
      $.reply_shortcut,
      $.dial_shortcut,
      $.open_url_shortcut,
      $.share_location_shortcut,
      $.create_calendar_event_shortcut,
      $.view_location_shortcut
    ),

    reply_shortcut: $ => seq(
      'reply',
      $.enhanced_simple_value,
      optional($.string)
    ),

    dial_shortcut: $ => seq(
      'dial',
      $.enhanced_simple_value,
      $.typed_value
    ),

    open_url_shortcut: $ => seq(
      'openUrl',
      $.enhanced_simple_value,
      $.typed_value,
      optional($.enhanced_simple_value),
      optional(seq(
        choice(':browser', ':webview'),
        optional(choice(':full', ':half', ':tall'))
      ))
    ),

    share_location_shortcut: $ => seq(
      'shareLocation',
      $.enhanced_simple_value
    ),

    create_calendar_event_shortcut: $ => seq(
      'saveEvent',
      $.enhanced_simple_value,
      choice(
        seq(
          $._indent,
          repeat(choice(
            seq('title', ':', $.enhanced_simple_value),
            seq('startTime', ':', $.typed_value),
            seq('endTime', ':', $.typed_value),
            seq('description', ':', $.enhanced_simple_value)
          )),
          $._dedent
        ),
        seq(
          $.enhanced_simple_value,
          $.typed_value,
          $.typed_value,
          $.enhanced_simple_value
        )
      )
    ),

    view_location_shortcut: $ => seq(
      'viewLocation',
      $.enhanced_simple_value,
      $._indent,
      choice(
        seq('latLong', ':', $.number, $.number),
        seq('query', ':', $.enhanced_simple_value)
      ),
      optional(seq('label', ':', $.enhanced_simple_value)),
      $._dedent
    ),
  }
});
