.archive/parser/tests/fixtures/corpus/identifiers.txt
================================================================================
Simple identifier
================================================================================

agent TestAgent
  displayName: "Test"
  messages Messages
    text Welcome "Hi"

--------------------------------------------------------------------------------

(source_file
  (agent_definition
    (identifier)
    (string)
    (messages_section
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string))))))))

================================================================================
Multi-word identifier with spaces
================================================================================

agent Multi Word Agent
  displayName: "Multi Word Test"
  flow Welcome Message Flow
    :start -> end
  messages Messages
    text Welcome Message "Hello"

--------------------------------------------------------------------------------

(source_file
  (agent_definition
    (identifier)
    (string)
    (flow_section
      (identifier)
      (flow_rule
        (flow_operand_or_expression
          (flow_operand
            (atom)))
        (flow_operand_or_expression
          (flow_operand
            (identifier)))))
    (messages_section
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string))))))))

================================================================================
Identifier with hyphens
================================================================================

agent Test-Agent-Name
  displayName: "Hyphenated"
  flow Main-Flow
    :start -> End-State
  messages Messages
    text End-State "Done"

--------------------------------------------------------------------------------

(source_file
  (agent_definition
    (identifier)
    (string)
    (flow_section
      (identifier)
      (flow_rule
        (flow_operand_or_expression
          (flow_operand
            (atom)))
        (flow_operand_or_expression
          (flow_operand
            (identifier)))))
    (messages_section
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string))))))))

================================================================================
Identifier with numbers after spaces
================================================================================

agent Agent 123
  displayName: "Numbered"
  flow Flow 2
    :start -> Step 3
  messages Messages
    text Step 3 "Step three"

--------------------------------------------------------------------------------

(source_file
  (agent_definition
    (identifier)
    (string)
    (flow_section
      (identifier)
      (flow_rule
        (flow_operand_or_expression
          (flow_operand
            (atom)))
        (flow_operand_or_expression
          (flow_operand
            (identifier)))))
    (messages_section
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string))))))))

================================================================================
Maximum complexity identifier
================================================================================

agent BMW-Circular World-Agent 2024
  displayName: "Complex Name"
  messages Messages
    text Welcome "Hi"

--------------------------------------------------------------------------------

(source_file
  (agent_definition
    (identifier)
    (string)
    (messages_section
      (message_shortcut
        (text_shortcut
          (identifier)
          (embedded_value
            (simple_value
              (string))))))))